--- a/Bakery.Service/Bakery.Service.csproj
+++ b/Bakery.Service/Bakery.Service.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bakery.Repository\Bakery.Repository.csproj">
+      <Private>True</Private>
+    </ProjectReference>
+  </ItemGroup>
+
 </Project>
