--- a/Bakery.Service/Bakery.Service.csproj
+++ b/Bakery.Service/Bakery.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Bakery.Repository\Bakery.Repository.csproj">
       <Private>True</Private>
     </ProjectReference>
