Squashed commit of the following:
commit 47da2dfa9bd661cb41fa8f3ef1036de174903bd7
Merge: f6cde96 b643723
Author: tuanvy <maituanvyst@gmail.com>
Date:   Fri Nov 14 02:21:52 2025 +0700

    Merge pull request #4 from tu0504/tuanvy/bakery-page

    Tuanvy/bakery page

commit b6437232e3a391e47886637ae603d394f72d477f
Merge: 612bf7e f6cde96
Author: tuanvy <maituanvyst@gmail.com>
Date:   Fri Nov 14 02:21:36 2025 +0700

    Merge branch 'main' into tuanvy/bakery-page

commit 612bf7eccae2caa91e5989a72851d50369058107
Author: tuanvy <maituanvyst@gmail.com>
Date:   Fri Nov 14 02:19:01 2025 +0700

    Bakery Page

commit f6cde96fe3498faa3f7ab79caf16fa22fa155ed2
Author: Vinh Nguyen <motmuahaxinhdep@gmail.com>
Date:   Fri Nov 14 01:44:05 2025 +0700

    fix layout order management

commit 495ef2ea58c17435e26b0d26f2d3a2ac0f96dee3
Merge: 303651d 31e3932
Author: Le Nguyen Anh Kiet <kietlnase18445@fpt.edu.vn>
Date:   Thu Nov 13 23:47:34 2025 +0700

    fix xong user.xaml

commit a28e1c387c809f75a62314ad8f5abff260c0fb4b
Author: tuanvy <maituanvyst@gmail.com>
Date:   Thu Nov 13 23:16:27 2025 +0700

    fix bug

commit 31e39326bce2321359d529a9ac25d2c28c232c4e
Author: tu0504 <tuttcse170213@fpt.edu.vn>
Date:   Thu Nov 13 21:42:52 2025 +0700

    done

commit d876bd20e3c38eeab835c0eb0ed0cc6dc72bb898
Author: tu0504 <tuttcse170213@fpt.edu.vn>
Date:   Thu Nov 13 21:33:25 2025 +0700

    done

commit d4eaef598b97fa6a55fddcf8cd451f04e61c8b64
Author: tu0504 <tuttcse170213@fpt.edu.vn>
Date:   Thu Nov 13 21:19:54 2025 +0700

    pro

commit b4406f46fdf7999f73da87bc1217813c516b9ea5
Merge: 9766146 5a7cdd5
Author: nguyen <149769526+qnguen14@users.noreply.github.com>
Date:   Thu Nov 13 18:41:35 2025 +0700

    Merge pull request #3 from tu0504/dev

    Dev

commit 5a7cdd580ad1b2bfaf37ce0b42d29f9c75f409c5
Author: nguyen <qnguyen.1014@gmail.com>
Date:   Thu Nov 13 18:39:30 2025 +0700

    fixed login + added logout button at admin dashboard

commit 614b1dc84b2e291720c0ea6b04e1d356091c70c9
Author: Vinh Ng

--- a/Bakery.WpfApplication/Bakery.WpfApplication.csproj
+++ b/Bakery.WpfApplication/Bakery.WpfApplication.csproj
@@ -68,6 +68,30 @@
     <Resource Include="Images\background.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Images\home.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\logout.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\name.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\order.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\pass.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\phone.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\product.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\search.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Images\birthday.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
@@ -106,6 +130,9 @@
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Images\birthday.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
